<resources>
    <string name="app_name">Reporte de Tiempos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_register">register</string>
    <string name="title_view_times">View times</string>
    <string name="title_activity_reporter">Reportar tiempos</string>

    <!-- Textos generales-->
    <string name="continuar">Continuar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="NameManager">¿Quién es tu gerente?</string>
    <string name="NameConceptHour">¿Cuál es tu concepto de hora?</string>
    <string name="NameClassificationConceptHour">Clasificación de concepto de hora</string>
    <string name="NameProyect">¿Cuál es tu proyecto?</string>
    <string name="Namefunctionality">¿A cuál funcionalidad reportarás?</string>
    <string name="Namediscipline">¿Cuál es tu disciplina?</string>
    <string name="NameActvity">¿Cuál es tu actividad?</string>


    <string name="activity">Actividad realizada</string>
    <string name="date">Fecha</string>
    <string name="hour">Horas</string>
    <string name="description">Descripción</string>
    <string name="requiriments">Requerimiento/Oc</string>
    <string name="reportar">REPORTAR</string>


    <!-- Mensaje de validación en registro y actualziar datos-->
    <string name="campos_incompletos">Campos incompletos</string>
    <string name="title_invalid_fields">Campos no válidos</string>
    <string name="debes_ingresar_tu_correo_electronico">Debes ingresar tu correo electrónico.</string>
    <string name="message_email_invalid">Correo electrónico no válido, por favor verifiquelo.</string>
    <string name="debes_ingresar_una_contrasenia">Debes ingresar una contraseña.</string>

    <!-- Hint para la actividad registro de tiempos-->
    <string name="hintSelectManager">Selecciona tu gerente</string>
    <string name="hintSelectConceptHour">Selecciona tu concepto de hora</string>
    <string name="hintSelectClassificationConceptHour">Selecciona la clasificación</string>
    <string name="hintSelectProyect">Seleccione el proyecto</string>
    <string name="hintSelectfunctionality">Seleccione la funcionalidad</string>
    <string name="hintSelectActivity">Seleccione actividad</string>
    <string name="hintSelectActivityCompleted">Actividad completada</string>
    <string name="hintSelectdiscipline">Seleccione disciplina</string>
    <string name="hintSelectDate">Seleccione Fecha</string>
    <string name="hintHours">Esfuerzo en horas</string>
    <string name="hintDescription">Descripción de la actividad</string>

    <string name="title_activity_menu">menu</string>
    <string name="view_report_times">Ver reporte de tiempos</string>
    <string name="weekly">Semanal</string>
    <string name="monthly">Mensual</string>
    <string name="byDate">Por fecha</string>
    <string name="search">Buscar</string>
    <string name="mdtp_from">DESDE</string>
    <string name="mdtp_to">HASTA</string>
    <string name="apreciado_usuario">Apreciado usuario</string>
    <string name="por_favor_valide_su_conexion_a_internet">Por favor valide su conexión a internet</string>
    <string name="first_item_menu_manager">Por colaborador</string>
    <string name="second_item_menu_manager">Por proyecto</string>

    <string name="por_favor_espere">Por favor espere</string>
    <string name="descripcion_de_la_actividad">Descripción de la actividad</string>
    <string name="date_picker">DatePicker</string>
    <string name="administrativo">Administrativo</string>
    <string name="administrativa">Administrativa</string>
    <string name="todos_los_gerentes">Todos los gerentes</string>
    <string name="faltan_campos_por_diligenciar">Faltan campos por diligenciar</string>
    <string name="advertencia">Advertencia</string>
    <string name="cuarenta_y_cinco">45</string>
    <string name="cero">0</string>
    <string name="ciento_ochenta">180</string>
    <string name="error_eliminando_tiempo">Error eliminando tiempo</string>
    <string name="time">time</string>
    <string name="administrativas">Administrativas</string>
    <string name="novedades">Novedades</string>
    <string name="productivas">Productivas</string>
    <string name="que_quieres_hacer_hoy">¿Qué quieres hacer hoy?</string>
    <string name="reportar_tiempos">Reportar tiempos</string>
    <string name="ver_reportes">Ver reportes</string>
    <string name="ingresar">INGRESAR</string>
    <string name="id_del_usuario">ID del usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="recordar_datos_de_acceso">Recordar datos de acceso</string>
    <string name="por_reportar">Por reportar</string>
    <string name="reportado">Reportado</string>
    <string name="por_proyecto">Por proyecto</string>
    <string name="buscar">Buscar</string>
    <string name="no_hay_registros_seleccionados">No hay registros relacionados</string>
    <string name="limpiar">Limpiar</string>
    <string name="ciento_treinta">130</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="por_colaborador">Por colaborador</string>

    <string name="user_id_manager">mlmartinez</string>
    <string name="password_manager">Mishijos201705</string>
    <string name="user_id_collaborator">lzuluagab</string>
    <string name="password_collaborator">Intergrupo2016.</string>
    <string name="por_colaborador_o_proyecto">Colaborador o Proyecto</string>


</resources>

