<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical"
              tools:context="com.intergrupo.reportedetiemposig.Ui.Controller.ViewTimesManager">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarM"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/por_proyecto"/>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearContainer1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_weeklyg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center|top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/weekly"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_monthlyg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center|top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/monthly"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_byDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center|top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/byDate"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <RelativeLayout
        android:id="@+id/containerListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"></LinearLayout>

        <ExpandableListView
            android:id="@+id/elvProyectg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:childIndicatorRight="@dimen/activity_vertical_margin">

        </ExpandableListView>


    </RelativeLayout>
</LinearLayout>
