<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.intergrupo.reportedetiemposig.Ui.Controller.ViewTimes">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#014BA0"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/view_report_times" />


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearContainer1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_weekly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:background="@drawable/border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/weekly"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_monthly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:background="@drawable/border">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/monthly"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_byDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:background="@drawable/border">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/byDate"
                android:gravity="center"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearContainer2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center|top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearContainer21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical"
            android:background="@drawable/border">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tvByReport"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="top|center"
                        android:textSize="45dp"
                        android:textColor="#B71400"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="por reportar"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#B71400"
                    android:orientation="vertical">

                </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearContainer22"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical"
            android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tvReported"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="top|center"
                        android:textSize="45dp"
                        android:textColor="#46A724"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="reportado"
                        android:textSize="12dp"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#46A724"
                    android:orientation="vertical">

                </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/containerListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp">
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/elvProyects"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:childIndicatorRight="@dimen/activity_vertical_margin">

        </ExpandableListView>


    </RelativeLayout>





</LinearLayout>